# Amari-RS

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: api.rs  cache.rs  defs.rs  lib.rs
tests/: bench_test.rs  cache_test.rs  lib_test.rs
