[package]
name = "amari-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Simple AmariBot API wrapper using Rust language."
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
log4rs = "1.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
serde_json = "1.0.104"
serde_with = "3.8.1"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
